// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "./proto";
package proto;

service FileUploadService {
  rpc UploadFile(FileUploadRequest) returns (FileUploadResponse) {}
  rpc DownloadFile(FileDownloadRequest) returns (FileDownloadResponse) {}
  rpc GetListFiles(ListFilesRequest) returns (stream ListFilesResponse) {}
}


message FileUploadRequest {
  bytes file_content = 1;
  string file_name = 2;
}

message FileUploadResponse {
  bool success = 1;
  string message = 2;
}

message FileDownloadRequest {
  string file_name = 1;
}

message FileDownloadResponse {
  bool success = 1;
  bytes file_content = 2;
  string file_name = 3;
}

message ListFilesRequest {
}

message ListFilesResponse {
  string file_name = 1;
  string date_create = 2;
  string date_change = 3;
}








